흑흑저는너무힘들어요

--- a/latest/index.html
+++ b/latest/index.html
@@ -220,7 +220,7 @@
                         </select>
                         <label for="suneung-korean-raw">원점수:</label>
                         <input type="number" id="suneung-korean-raw" min="0" max="100">
-                        <div class="suneung-calculated-scores" id="suneung-korean-calculated"></div> <!-- 계산된 점수 표시 영역 -->
+                        <!-- 계산된 점수 표시 영역 제거됨 -->
                     </fieldset>
 
                     <!-- 수학 -->
@@ -232,7 +232,7 @@
                         </select>
                         <label for="suneung-math-raw">원점수:</label>
                         <input type="number" id="suneung-math-raw" min="0" max="100">
-                        <div class="suneung-calculated-scores" id="suneung-math-calculated"></div> <!-- 계산된 점수 표시 영역 -->
+                         <!-- 계산된 점수 표시 영역 제거됨 -->
                     </fieldset>
 
                     <!-- 영어 -->
@@ -240,7 +240,7 @@
                         <legend>영어</legend>
                         <label for="suneung-english-raw">원점수:</label>
                         <input type="number" id="suneung-english-raw" min="0" max="100">
-                         <div class="suneung-calculated-scores" id="suneung-english-calculated"></div> <!-- 계산된 점수 표시 영역 -->
+                         <!-- 계산된 점수 표시 영역 제거됨 -->
                     </fieldset>
 
                     <!-- 한국사 -->
@@ -248,7 +248,7 @@
                         <legend>한국사</legend>
                         <label for="suneung-history-raw">원점수:</label>
                         <input type="number" id="suneung-history-raw" min="0" max="50">
-                        <div class="suneung-calculated-scores" id="suneung-history-calculated"></div> <!-- 계산된 점수 표시 영역 -->
+                         <!-- 계산된 점수 표시 영역 제거됨 -->
                     </fieldset>
 
                     <!-- 탐구 1 -->
@@ -260,7 +260,7 @@
                         </select>
                         <label for="suneung-explorer1-raw">원점수:</label>
                         <input type="number" id="suneung-explorer1-raw" min="0" max="50">
-                        <div class="suneung-calculated-scores" id="suneung-explorer1-calculated"></div> <!-- 계산된 점수 표시 영역 -->
+                         <!-- 계산된 점수 표시 영역 제거됨 -->
                     </fieldset>
 
                     <!-- 탐구 2 -->
@@ -272,7 +272,7 @@
                         </select>
                         <label for="suneung-explorer2-raw">원점수:</label>
                         <input type="number" id="suneung-explorer2-raw" min="0" max="50">
-                        <div class="suneung-calculated-scores" id="suneung-explorer2-calculated"></div> <!-- 계산된 점수 표시 영역 -->
+                         <!-- 계산된 점수 표시 영역 제거됨 -->
                     </fieldset>
                 </div>
             </div>
